# imshare

./: .gitignore  API.md  Cargo.toml  GUIDE.md  README.md  build.sh  config.toml.example  env.example  flake.nix  imshare-service.nix  nixos-module.nix  test-cookies.sh  test-verification.sh
src/: api.rs  config.rs  db.rs  jwt.rs  main.rs  qr.rs  utils.rs  verify.rs  web.rs
templates/: dashboard.html
