[package]
name = "imshare"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "imshare"
path = "src/main.rs"

[[bin]]
name = "imshare-verify"
path = "src/verify.rs"

[[bin]]
name = "imshare-api"
path = "src/api.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Crypto
sha2 = "0.10"
jsonwebtoken = "9"
base64 = "0.22"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Config and serialization
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = "0.4"
time = "0.3"

# HTTP server (for imshare-verify)
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.6", features = ["trace"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower-cookies = { version = "0.10", features = ["signed"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for proxying)
reqwest = { version = "0.12", features = ["json"] }

# Utilities
uuid = { version = "1.10", features = ["v4"] }
regex = "1.10"
rand = "0.8"

# QR code generation
qrcode = "0.14"
image = "0.25"
